@@ -8,13 +8,15 @@ import co.edu.eci.pigball.game.model.dto.BallDTO;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class GameMapper {
+
+    private GameMapper(){
+        // Hiding explicit Constructor
+    }
     public static GameDTO toDTO(Game game) {
         List<PlayerDTO> playersDTO = game.getPlayers().values().stream()
-                .map(PlayerDTO::toDTO)
-                .collect(Collectors.toList());
+                .map(PlayerDTO::toDTO).toList();
         BallDTO ballDTO = new BallDTO(game.getBall().getX(), game.getBall().getY(), game.getBall().getVelocityX(), game.getBall().getVelocityY());
         Pair<Integer, Integer> teams = new Pair<>(game.getTeams().getFirst().getScore(), game.getTeams().getSecond().getScore());           
         return new GameDTO(game.getGameId(), game.getGameName(), 
@@ -25,7 +27,6 @@ public class GameMapper {
 
     public static Collection<GameDTO> toDTO(Collection<Game> games) {
         return games.stream()
-                .map(GameMapper::toDTO)
-                .collect(Collectors.toList());
+                .map(GameMapper::toDTO).toList();
     }
 }
